--- a/SpookyGhostwriterComics/manifest.json
+++ b/SpookyGhostwriterComics/manifest.json
@@ -5,8 +5,9 @@
    "namespace":"SpookyGhostwriter",
    "dll":"SpookyGhostwriterComicsMod.dll",
    "credits":"Alesia Circus Music: Tenebrous Brothers Carnival - Act One by Kevin MacLeod
-   https://incompetech.filmmusic.io/song/4470-tenebrous-brothers-carnival---act-one
-   http://creativecommons.org/licenses/by/4.0/",
+   
+Other creators' characters featured in card art:
+* Escarlata's Roast - Ghost Girl and Manny the Skull, by Mike Williams",
    "decks":{
       "heroes":[
          "Escarlata",
