--- a/SpookyGhostwriterComics/manifest.json
+++ b/SpookyGhostwriterComics/manifest.json
@@ -14,7 +14,8 @@
    "decks":{
       "heroes":[
          "Escarlata",
-		 "GoldDragon"
+		 "GoldDragon",
+		 "Tsukiko"
       ],
       "villains":[
       ],
