--- a/SpookyGhostwriterComics/manifest.json
+++ b/SpookyGhostwriterComics/manifest.json
@@ -14,8 +14,7 @@
    "decks":{
       "heroes":[
          "Escarlata",
-		 "GoldDragon",
-		 "Tsukiko"
+		 "GoldDragon"
       ],
       "villains":[
       ],
