Disabling Electrogeist for now

--- a/SpookyGhostwriterComics/manifest.json
+++ b/SpookyGhostwriterComics/manifest.json
@@ -16,8 +16,7 @@
       "heroes":[
          "Escarlata",
 		 "GoldDragon",
-		 "Tsukiko",
-		 "Electrogeist"
+		 "Tsukiko"
       ],
       "villains":[
       ],
