--- a/SpookyGhostwriterComics/manifest.json
+++ b/SpookyGhostwriterComics/manifest.json
@@ -1,11 +1,12 @@
 {
    "title":"Spooky Ghostwriter Comics",
    "author":"Eric - www.spooky-ghostwriter.tumblr.com",
+   "color":"FF7D00",
    "description":[
 	"A small but hopefully continuously-expanding set of decks created by me, Tesla_Coil. These are based on the fictional comic series Dressed to Kill and New Granwall Guardians, produced by the equally fictional company Spooky Ghostwriter Comics.",
 	"",
 	"Want to offer feedback, see what's coming next, or get printable versions of these decks? Check out the Sentinels of the Multiverse Variant forums on BoardGameGeek!"],
-	"version": "v0.0.3",
+	"version": "v0.0.4",
    "namespace":"SpookyGhostwriter",
    "dll":"SpookyGhostwriterComicsMod.dll",
    "credits":
